# VapourSynth-BM3DCUDA-api4

./: .gitignore  CMakeLists.txt  README.md  hatch_build.py  pyproject.toml
.github/workflows/: linux-arm64.yml  linux.yml  windows.yml
cpu_source/: CMakeLists.txt  source.cpp
hip_source/: CMakeLists.txt
rtc_source/: CMakeLists.txt  source.cpp
source/: CMakeLists.txt
tools/: ci_build_windows.py  ci_prepare_windows.py  package_plugin_zip.py  smoke_bm3dcpu.py  smoke_installed_wheel.py  smoke_load_artifact.py
